# pickUpLivery

./: .gitignore  Dockerfile  OLD.py  README.md  app.py  comands.txt  docker-compose.yaml  pickup.db  project_structure.txt  pyproject.toml  requirements.txt  requirements1.txt  structure.txt
app/: main.py
app/api/v1/: admin.py  auth.py  db_inspect.py  pages.py  pickups.py  user.py
app/core/: config.py  deps.py  image_utils.py  security.py
app/db/: init_db.py  migrations.py  schema.py  session.py
app/db/models/: __init__.py  init.py  links.py  pharmacy.py  pickup.py  pickup_photo.py  region.py  settings.py  user.py
app/services/: dedup.py
app/static/: app.js  style.css  test.css
app/static/css/: 404.css  base.css  components.css  error.css  fonts.css  history.css  home.css  layout.css  login.css  no_photo.css  pickup.css  settings.css  success.css  tasks.css
app/templates/: 404.html  base.html  error.html  history.html  history_forbidden.html  login.html  no_photo.html  pickup.html  success.html  tasks.html
app/templates/admin/: home.html  settings.html
app/templates/partials/: icons-sprite.html  icons.html
static/: app.js
templates/: base.html  dashboard.html  history.html  login.html  pickup.html  success.html
templates/admin/: home.html
