[project]
name = "pickuplivery"
version = "0.1.0"
description = "PickUp Livery backend (FastAPI + SQLModel + PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",

  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.2.1",

  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",

  "watchfiles>=0.21.0",

  "Pillow",
  "argon2-cffi",

  "openpyxl>=3.1.0",
  "psycopg2-binary>=2.9.9"
]

[tool.pytest.ini_options]
pythonpath = "."
